[package]
    name = "simple-cache"
    description = "A basic and simple Rust library async/await ready caching implementation for structures."
    version = "0.1.0"
    authors = ["Emulator000 <emulator@hotmail.it>"]
    edition = "2018"
    readme = "README.md"
    repository = "https://github.com/Emulator000/simple-cache"
    license = "MIT"

[dependencies]
    async-std = "^1.6"
    arc-swap = "^0.4"
    tokio = { version = "^0.2", features = ["full"] }
